kubernetes/apps/tools/miniflux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: tools
spec:
  ports:
    - port: 8080
  selector:
    app: miniflux
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux-db
  namespace: tools
spec:
  ports:
    - port: 5432
  selector:
    app: miniflux-db
