kubernetes/apps/tools/miniflux/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: miniflux
  namespace: tools
spec:
  parentRefs:
    - name: prod
      namespace: gateway
  hostnames:
    - miniflux.local.elmurphy.com
  rules:
    - backendRefs:
        - name: miniflux
          port: 8080
